--- a/order-confirm.html
+++ b/order-confirm.html
@@ -15,12 +15,6 @@
 </head>
 <body>
     <header>
-        <!-- deals bar -->
-        <!-- <nav class="navbar p-0 bg-orange-60 text-wrap">
-            <div class="container-fluid p-0 justify-content-center">
-              <span class="navbar-brand mb-0 font-12 text-white">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!es And Free Express Delivery - OFF 50%!</span>
-            </div>
-        </nav> -->
         <div class="bg-orange-60" style="width: 100%;">
             <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
         </div>
@@ -80,10 +74,10 @@
     </header>
 
     <main>
-        <section class="margin-80">
-            <div class="border-1 text-center p-5 d-flex">
+        <section class="order__confirm">
+            <div class="border-1 text-center p-2 p-lg-5 d-flex">
                 <div class="d-flex align-items-end">
-                    <img src="wwwroot/images/order-confirm-orange.svg" alt="confirmation-img">
+                    <img src="wwwroot/images/order-confirm-orange.svg" class="img-fluid" alt="confirmation-img">
                 </div>
                 <div class="mx-auto" style="width: 70%;">
                     <img src="wwwroot/images/order-confirm-icon.svg" alt="confirmation-icon">
@@ -92,7 +86,7 @@
                     shortly with the expected delivery date for your items.</p>
                 </div>
                 <div class="d-flex align-items-start">
-                    <img src="wwwroot/images/order-confirm-black.svg" alt="confirmation-img">
+                    <img src="wwwroot/images/order-confirm-black.svg" class="img-fluid" alt="confirmation-img">
                 </div>
             </div>
         </section>
