--- a/product-page.html
+++ b/product-page.html
@@ -87,46 +87,60 @@
         <section>
             <div class="row g-0 py-5">
                 <div class="col-12 col-lg-7">
-                    <img src="https://placehold.co/400x500/FDD1CB/white" class="rounded-0" alt="...">
+                    <div class="mb-3">
+                        <img src="https://placehold.co/400x500/FDD1CB/white" class="rounded-0 img-fluid" alt="product-img">
+                    </div>
                 </div>
                 <div class="col-12 col-lg-5">
                     <div>
                         <div class="d-flex justify-content-between border-bottom">
-                            <p class="text-orange font-20">Product 1</p>
-                            <p class="text-orange font-16">Rs. 2,199</p>
+                            <p class="text-orange font-20 bold">Product 1</p>
+                            <p class="text-orange font-16 semibold">Rs. 2,199</p>
                         </div>
                         <div class="border-bottom py-4">
-                            <p class="text-orange font-14 text-uppercase">Color</p>
+                            <p class="text-orange font-14 bold text-uppercase">Color</p>
                             <div>
-                                <button class="btn p-0">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5" alt="product-color-img">
+                                <button class="btn p-0 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5" alt="product-color-img">
+                                <button class="btn p-0 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5" alt="product-color-img">
+                                <button class="btn p-0 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5" alt="product-color-img">
+                                <button class="btn p-0 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
                             </div>
                         </div>
                         <div class="border-bottom py-4">
                             <div class="d-flex justify-content-between">
-                                <p class="text-orange font-14 text-uppercase">Size(UK):</p>
-                                <p class="text-orange font-14 text-uppercase">SIZE GUIDE</p>
+                                <p class="text-orange font-14 bold text-uppercase">Size(UK):</p>
+                                <p class="text-orange font-14 bold text-uppercase d-flex">SIZE GUIDE&nbsp;&nbsp;
+                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="20" height="20" rx="10" fill="#DB4834"/>
+                                    <g clip-path="url(#clip0_312_1171)">
+                                    <path d="M9.44078 11.3915C9.44078 11.129 9.48203 10.8965 9.56453 10.694C9.65453 10.4915 9.76328 10.3115 9.89078 10.154C10.0258 9.99648 10.1683 9.85023 10.3183 9.71523C10.4683 9.58023 10.607 9.45273 10.7345 9.33273C10.8695 9.20523 10.9783 9.07398 11.0608 8.93898C11.1508 8.80398 11.1958 8.65398 11.1958 8.48898C11.1958 8.21898 11.0833 8.00148 10.8583 7.83648C10.6408 7.67148 10.3483 7.58898 9.98078 7.58898C9.62828 7.58898 9.31328 7.66398 9.03578 7.81398C8.75828 7.95648 8.52953 8.15898 8.34953 8.42148L6.98828 7.62273C7.28828 7.16523 7.70453 6.80148 8.23703 6.53148C8.76953 6.25398 9.41453 6.11523 10.172 6.11523C10.7345 6.11523 11.2295 6.19773 11.657 6.36273C12.0845 6.52023 12.4183 6.75273 12.6583 7.06023C12.9058 7.36773 13.0295 7.74648 13.0295 8.19648C13.0295 8.48898 12.9845 8.74773 12.8945 8.97273C12.8045 9.19773 12.6883 9.39273 12.5458 9.55773C12.4033 9.72273 12.2495 9.87648 12.0845 10.019C11.927 10.1615 11.777 10.3002 11.6345 10.4352C11.492 10.5702 11.372 10.7127 11.2745 10.8627C11.1845 11.0127 11.1395 11.189 11.1395 11.3915H9.44078ZM10.2958 14.2152C9.98078 14.2152 9.72203 14.114 9.51953 13.9115C9.31703 13.709 9.21578 13.469 9.21578 13.1915C9.21578 12.9065 9.31703 12.6702 9.51953 12.4827C9.72203 12.2877 9.98078 12.1902 10.2958 12.1902C10.6183 12.1902 10.877 12.2877 11.072 12.4827C11.2745 12.6702 11.3758 12.9065 11.3758 13.1915C11.3758 13.469 11.2745 13.709 11.072 13.9115C10.877 14.114 10.6183 14.2152 10.2958 14.2152Z" fill="white"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_312_1171">
+                                    <rect width="9" height="9" fill="white" transform="translate(5.5 5.5)"/>
+                                    </clipPath>
+                                    </defs>
+                                    </svg>
+                                </p>
                             </div>
                             <div>
-                                <button class="btn-size btn me-2">4</button>
-                                <button class="btn-size btn me-2">5</button>
-                                <button class="btn-size btn me-2">6</button>
-                                <button class="btn-size btn me-2">7</button>
-                                <button class="btn-size btn me-2">8</button>
-                                <button class="btn-size btn me-2">9</button>
-                                <button class="btn-size btn me-2">10</button>
-                                <button class="btn-size btn me-2">11</button>
-                                <button class="btn-size btn me-2">12</button>
+                                <button class="btn-size btn me-2 mb-2">4</button>
+                                <button class="btn-size btn me-2 mb-2">5</button>
+                                <button class="btn-size btn me-2 mb-2">6</button>
+                                <button class="btn-size btn me-2 mb-2">7</button>
+                                <button class="btn-size btn me-2 mb-2">8</button>
+                                <button class="btn-size btn me-2 mb-2">9</button>
+                                <button class="btn-size btn me-2 mb-2">10</button>
+                                <button class="btn-size btn me-2 mb-2">11</button>
+                                <button class="btn-size btn me-2 mb-2">12</button>
                             </div>
                         </div>
                         <div class="d-grid gap-2">
@@ -140,7 +154,7 @@
                             <div class="accordion accordion-flush" id="accordionFlushExample">
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
-                                    <button class="accordion-button accordion-product border-bottom px-0 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    <button class="accordion-button accordion-product border-bottom px-0 font-18 bold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                         PRODUCT DETAILS
                                     </button>
                                   </h2>
@@ -153,7 +167,7 @@
                             </div>
                         </div>
                         <div class="py-3">
-                            <h5 class="text-orange text-uppercase font-16">SHIPPING & RETURNS</h5>
+                            <h5 class="text-orange text-uppercase font-16 bold">SHIPPING & RETURNS</h5>
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex align-items-center gap-2">
                                     <img src="wwwroot/images/shipping-icon.svg">
@@ -175,60 +189,60 @@
         </section>
 
         <section>
-            <div class="row py-4">
-                <div class="col">
-                    <div class="">
-                        <h2 class="text-orange font-40">Title 1</h2>
+            <div class="row py-4 g-0">
+                <div class="col-12 col-lg-6 order-1 order-lg-0">
+                    <div class="d-flex flex-column align-items-center align-items-lg-start">
+                        <h2 class="text-orange font-40 semibold">Title 1</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum 
                         dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-flex justify-content-end">
+                <div class="col-12 col-lg-6 order-0 order-lg-1">
+                    <div class="d-flex justify-content-center justify-content-lg-end mb-4 mb-lg-0">
                         <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
             </div>
-            <div class="row py-4">
-                <div class="col">
-                    <div class="d-flex justify-content-start">
+            <div class="row py-4 g-0">
+                <div class="col-12 col-lg-6">
+                    <div class="d-flex justify-content-center justify-content-lg-start mb-4 mb-lg-0">
                         <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
-                <div class="col">
-                    <div class="">
-                        <h2 class="text-orange font-40">Title 2</h2>
+                <div class="col-12 col-lg-6">
+                    <div class="d-flex flex-column align-items-center align-items-lg-start">
+                        <h2 class="text-orange font-40 semibold">Title 2</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum 
                         dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum</p>
                     </div>
                 </div>
             </div>
-            <div class="row py-4">
-                <div class="col">
-                    <div class="">
-                        <h2 class="text-orange font-40">Title 3</h2>
+            <div class="row py-4 g-0">
+                <div class="col-12 col-lg-6 order-1 order-lg-0">
+                    <div class="d-flex flex-column align-items-center align-items-lg-start">
+                        <h2 class="text-orange font-40 semibold">Title 3</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum 
                         dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="d-flex justify-content-end">
+                <div class="col-12 col-lg-6 order-0 order-lg-1">
+                    <div class="d-flex justify-content-center justify-content-lg-end mb-4 mb-lg-0">
                         <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
             </div>
-            <div class="row py-4">
-                <div class="col">
-                    <div class="d-flex justify-content-start">
+            <div class="row py-4 g-0">
+                <div class="col-12 col-lg-6">
+                    <div class="d-flex justify-content-center justify-content-lg-start mb-4 mb-lg-0">
                         <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
-                <div class="col">
-                    <div class="">
-                        <h2 class="text-orange font-40">Title 4</h2>
+                <div class="col-12 col-lg-6">
+                    <div class="d-flex flex-column align-items-center align-items-lg-start">
+                        <h2 class="text-orange font-40 semibold">Title 4</h2>
                         <p class="font-20 text-black-95">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum 
                         dolor sit amet, consectetur adipiscing elit.adipiscing elit. Lorem ipsum
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum</p>
@@ -241,7 +255,7 @@
         </section>
         <section class="py-5">
             <h1 class="text-center text-orange my-3 font-60">Similar Product</h1>
-            <div class="row">
+            <div class="row g-0">
   
                 <div class="col px-0">
                   <a href="product-page.html" style="text-decoration: none;">
