--- a/checkout.html
+++ b/checkout.html
@@ -15,12 +15,6 @@
 </head>
 <body>
     <header>
-        <!-- deals bar -->
-        <!-- <nav class="navbar p-0 bg-orange-60 text-wrap">
-            <div class="container-fluid p-0 justify-content-center">
-              <span class="navbar-brand mb-0 font-12 text-white">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!es And Free Express Delivery - OFF 50%!</span>
-            </div>
-        </nav> -->
         <div class="bg-orange-60" style="width: 100%;">
             <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
         </div>
@@ -83,9 +77,9 @@
         <section>
             <h1 class="text-center text-orange my-3 font-60">Check Out</h1>
             <div class="row align-items-center justify-content-center">
-                <div class="col-12 col-lg-6 px-5">
+                <div class="col-12 col-lg-6 px-0 px-lg-5">
                     <div class="">
-                        <h4 class="text-orange bold mb-5">Billing Details</h4>
+                        <h4 class="text-orange bold font-35 mb-0 mb-lg-4">Billing Details</h4>
                         <form class="row g-3 my-3">
                             <div class="col-12">
                               <label for="validationDefault01" class="form-label">First Name*</label>
@@ -123,28 +117,25 @@
                                 </label>
                               </div>
                             </div>
-                            <div class="col-12">
-                              <button class="btn btn-1" type="submit">Submit form</button>
-                            </div>
                         </form>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 px-5">
-                    <div class="bg-orange-10 p-4">
+                <div class="col-12 col-lg-6 px-0 px-lg-5 mb-4 mb-lg-0">
+                    <div class="bg-orange-10 p-2 p-lg-4">
 
                         <div class="d-flex align-items-center justify-content-between py-2">
                         
                             <div class="d-flex align-items-center">
                                 <button class="btn p-0">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-0" alt="product-color-img">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-0 img-fluid" alt="product-color-img">
                                 </button>
-                                <div class="ms-4">
-                                    <h5 class="mb-2 text-orange bold">Product 1</h5>
-                                    <p class="mb-0 text-orange">Size : <span>6</span></p>
+                                <div class="ms-2 ms-lg-4">
+                                    <h5 class="mb-2 text-orange font-20 bold">Product 1</h5>
+                                    <p class="mb-0 text-orange font-18">Size : <span>6</span></p>
                                 </div>
                             </div>
                             <div>
-                                <h5 class="text-orange bold">Rs. 2,499</h5>
+                                <h5 class="text-orange font-18">Rs. 2,499</h5>
                             </div>
                         </div>
                         <div class="d-flex align-items-center justify-content-between py-2">
@@ -153,13 +144,13 @@
                                 <button class="btn p-0">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-0" alt="product-color-img">
                                 </button>
-                                <div class="ms-4">
-                                    <h5 class="mb-2 text-orange bold">Product 1</h5>
-                                    <p class="mb-0 text-orange">Size : <span>6</span></p>
+                                <div class="ms-2 ms-lg-4">
+                                    <h5 class="mb-2 text-orange font-20 bold">Product 1</h5>
+                                    <p class="mb-0 text-orange font-18">Size : <span>6</span></p>
                                 </div>
                             </div>
                             <div>
-                                <h5 class="text-orange bold">Rs. 2,499</h5>
+                                <h5 class="text-orange font-18">Rs. 2,499</h5>
                             </div>
                         </div>
                         <div class="d-flex align-items-center justify-content-between py-2">
@@ -168,21 +159,21 @@
                                 <button class="btn p-0">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-0" alt="product-color-img">
                                 </button>
-                                <div class="ms-4">
-                                    <h5 class="mb-2 text-orange bold">Product 1</h5>
-                                    <p class="mb-0 text-orange">Size : <span>6</span></p>
+                                <div class="ms-2 ms-lg-4">
+                                    <h5 class="mb-2 text-orange font-20 bold">Product 1</h5>
+                                    <p class="mb-0 text-orange font-18">Size : <span>6</span></p>
                                 </div>
                             </div>
                             <div>
-                                <h5 class="text-orange bold">Rs. 2,499</h5>
+                                <h5 class="text-orange font-18">Rs. 2,499</h5>
                             </div>
                         </div>
 
                         <div class="row py-2">
-                            <div class="col-sm-10">
+                            <div class="col-8 col-lg-10">
                               <input type="email" class="form-control" id="coupon" placeholder="Discount code or gift card">
                             </div>
-                            <div class="col-sm-2">
+                            <div class="col-4 col-lg-2">
                                 <button type="submit" class="btn-2 btn mb-3">Apply</button>
                             </div>                            
                         </div>
@@ -199,7 +190,7 @@
                         </div>
                         <p class="text-orange py-1">Including ₹1,040.12 in taxes</p>
                         <div class="d-grid">
-                            <button type="submit" class="btn-2 btn mb-3">Pay Now</button>
+                            <button type="submit" class="btn-2 btn mb-3 font-30">Pay Now</button>
                         </div>
 
                     </div>
