--- a/contact.html
+++ b/contact.html
@@ -83,12 +83,12 @@
         <section>
             <h1 class="text-center text-orange my-3 font-60">Contact Us</h1>
             <div class="row align-items-center justify-content-center my-5">
-                <div class="col-12 col-lg-6 px-5">
+                <div class="col-12 col-lg-6 px-0 px-lg-5">
                     <div class="d-flex justify-content-center">
                         <img src="https://placehold.co/500x500/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 px-5">
+                <div class="col-12 col-lg-6 px-0 px-lg-5">
                     <div class="">
                         <form class="row g-3 my-3">
                             <div class="col-12">
@@ -108,7 +108,7 @@
                                 <textarea type="text" class="form-control" id="validationDefault04" rows="3"></textarea>
                             </div> 
                             <div class="col-12 d-grid">
-                              <button class="btn btn-2" type="submit">Submit form</button>
+                              <button class="btn btn-2" type="submit">Submit</button>
                             </div>
                         </form>
                     </div>
