--- a/index.html
+++ b/index.html
@@ -41,15 +41,20 @@
                             <a class="nav-link" href="#">Testimonials</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">FAQ</a>
+                            <a class="nav-link" href="faq.html">FAQ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contacts</a>
                         </li>
                     </ul>
+                    <!-- mobile view -->
                     <div class="d-flex d-md-none align-items-center justify-content-center">
-                        <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
-                        <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                        <a href="javascript:void{0};">
+                            <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
+                        </a>
+                        <a href="cart.html">
+                            <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                        </a>
                         <div class="d-flex flex-column align-items-end mx-3">
                             <p class="m-0 text-orange font-12">Hi Welcome!</p>
                             <p class="m-0 text-orange font-14">Michel...</p>
@@ -58,8 +63,12 @@
                     </div>
                 </div>
                 <div class="d-none d-md-flex align-items-center">
-                    <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
-                    <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                    <a href="javascript:void{0};">
+                        <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
+                    </a>
+                    <a href="cart.html">
+                        <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                    </a>
                     <div class="d-flex flex-column align-items-end mx-3">
                         <p class="m-0 text-orange font-12">Hi Welcome!</p>
                         <p class="m-0 text-orange font-14">Michel</p>
