--- a/product-page.html
+++ b/product-page.html
@@ -15,12 +15,6 @@
 </head>
 <body>
     <header>
-        <!-- deals bar -->
-        <!-- <nav class="navbar p-0 bg-orange-60 text-wrap">
-            <div class="container-fluid p-0 justify-content-center">
-              <span class="navbar-brand mb-0 font-12 text-white">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!es And Free Express Delivery - OFF 50%!</span>
-            </div>
-        </nav> -->
         <div class="bg-orange-60" style="width: 100%;">
             <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
         </div>
@@ -49,7 +43,7 @@
                     <a class="nav-link" href="#">Testimonials</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link" href="faq.html">FAQ</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contacts</a>
