--- a/products.html
+++ b/products.html
@@ -20,12 +20,6 @@
 <body>
 
   <header>
-    <!-- deals bar -->
-    <!-- <nav class="navbar p-0 bg-orange-60 text-wrap">
-        <div class="container-fluid p-0 justify-content-center">
-          <span class="navbar-brand mb-0 font-12 text-white">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!es And Free Express Delivery - OFF 50%!</span>
-        </div>
-    </nav> -->
     <div class="bg-orange-60" style="width: 100%;">
       <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF
         50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
@@ -56,15 +50,19 @@
               <a class="nav-link" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">FAQ</a>
+              <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contacts</a>
             </li>
           </ul>
           <div class="d-flex d-md-none align-items-center justify-content-center">
-            <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
-            <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+            <a href="javascript:void{0};">
+              <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
+            </a>
+            <a href="cart.html">
+              <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+            </a>
             <div class="d-flex flex-column align-items-end mx-3">
               <p class="m-0 text-orange font-12">Hi Welcome!</p>
               <p class="m-0 text-orange font-14">Michel...</p>
@@ -254,164 +252,6 @@
           </div>
 
         </div>
-        <!-- modal filter starts -->
-        <!-- <div>
-                    
-                  <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="text-orange modal-title font-26" id="exampleModalToggleLabel">Filter</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="d-flex justify-content-between mb-3">
-                            <h5 class="text-orange ">Size (UK)</h5>
-                            <a href="#" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal"><img src="wwwroot/images/next-arrow.svg"></a>
-                          </div>
-                          <div class="d-flex justify-content-between mb-3">
-                            <h5 class="text-orange ">Type</h5>
-                            <a href="#" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal"><img src="wwwroot/images/next-arrow.svg"></a>
-                          </div>
-                        </div>
-                        <div class="modal-footer">
-                          <a class="text-orange me-3" href="#">Remove All</a>
-                          <button class="btn btn-1">Apply</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="text-orange font-26 modal-title" id="exampleModalToggleLabel2">Filter</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="d-flex gap-3 mb-3">
-                            <a href="#" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><img src="wwwroot/images/back-arrow.svg"></a>
-                            <h5 class="text-orange">Size</h5>
-                          </div>
-
-                          <div class="px-5">
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="text-orange form-check-label" for="flexCheckDefault">
-                              3
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                            <label class="text-orange form-check-label" for="flexCheckChecked">
-                              4
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="text-orange form-check-label" for="flexCheckDefault">
-                              5
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                            <label class="text-orange form-check-label" for="flexCheckChecked">
-                              6
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="text-orange form-check-label" for="flexCheckDefault">
-                              7
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                            <label class="text-orange form-check-label" for="flexCheckChecked">
-                              8
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="text-orange form-check-label" for="flexCheckDefault">
-                              9
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                            <label class="text-orange form-check-label" for="flexCheckChecked">
-                              10
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="text-orange form-check-label" for="flexCheckDefault">
-                              11
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                            <label class="text-orange form-check-label" for="flexCheckChecked">
-                              12
-                            </label>
-                          </div>
-                        </div>
-                        </div>
-                        <div class="modal-footer">
-                          <a class="text-orange me-3" href="#">Clear</a>
-                          <button class="btn btn-1">Apply</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="modal fade" id="exampleModalToggle3" aria-hidden="true" aria-labelledby="exampleModalToggleLabel3" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="text-orange font-26 modal-title" id="exampleModalToggleLabel3">Filter</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="d-flex gap-3 mb-3">
-                            <a href="#" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"><img src="wwwroot/images/back-arrow.svg"></a>
-                            <h5 class="text-orange ">Type</h5>
-                          </div>
-
-                          <div class="px-5">
-                            <div class="form-check my-2">
-                              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                              <label class="text-orange form-check-label" for="flexCheckDefault">
-                                Shoes
-                              </label>
-                            </div>
-                            <div class="form-check my-2">
-                              <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
-                              <label class="text-orange form-check-label" for="flexCheckChecked">
-                                Chappal
-                              </label>
-                            </div>
-                            <div class="form-check my-2">
-                              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                              <label class="text-orange form-check-label" for="flexCheckDefault">
-                                Sandels
-                              </label>
-                            </div>
-                            </div>
-
-                        </div>
-                        <div class="modal-footer">
-                          <a class="text-orange me-3" href="#">Clear</a>
-                          <button class="btn btn-1">Apply</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <a class="btn btn-1" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Filter by</a>
-
-                </div> -->
-        <!-- modal filter ends -->
       </div>
       <div class="row" id="divProductList">
 
