--- a/edit-address.html
+++ b/edit-address.html
@@ -18,21 +18,21 @@
         </div>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg shadow">
-            <div class="justify-content-start gap-2 container-fluid p-0 ">
-                <button class="border-0 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container-fluid p-0 ">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="">
-                        <img src="wwwroot/images/nav-open-icon.svg" class="nav-open-icon">
+                        <img src="wwwroot/images/nav-open-icon.svg" class="nav-open-icon border-0">
                         <img src="wwwroot/images/nav-close-icon.svg" class="nav-close-icon">
                     </span>
                 </button>
-                <a class="m-0 navbar-brand" href="index.html"><img src="wwwroot/images/gaitonde-logo.svg" class="img-fluid" alt="logo"></a>
-                <div class="collapse navbar-collapse justify-content-between flex-grow-1" id="navbarSupportedContent">
-                    <ul class="navbar-nav d-flex justify-content-center mb-2 mx-auto mb-lg-0 align-items-center">
+                <a class="navbar-brand" href="#"><img src="wwwroot/images/gaitonde-logo.svg"></a>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Gaitonde</a>
+                            <a class="nav-link" href="#">Gaitonde</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="products.html">Products</a>
@@ -47,21 +47,8 @@
                             <a class="nav-link" href="contact.html">Contacts</a>
                         </li>
                     </ul>
-                    <div class="position-relative d-flex justify-content-center align-items-center me-0">
-                        <a href="javascript:void{0};">
-                            <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
-                        </a>
-                        <a href="cart.html">
-                            <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
-                        </a>
-                        <div class="d-flex flex-column align-items-end mx-3">
-                            <p class="m-0 text-orange font-12">Hi Welcome!</p>
-                            <p class="m-0 text-orange font-14">Michel</p>
-                        </div>
-                        <img src="wwwroot/images/nav-avatar.svg" alt="profile-img">
-                    </div>
                     <!-- mobile view -->
-                    <!-- <div class="d-flex d-md-none align-items-center justify-content-center">
+                    <div class="d-flex d-md-none align-items-center justify-content-center">
                         <a href="javascript:void{0};">
                             <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
                         </a>
@@ -73,150 +60,77 @@
                             <p class="m-0 text-orange font-14">Michel...</p>
                         </div>
                         <img src="wwwroot/images/nav-avatar.svg" alt="profile-img">
-                    </div> -->
+                    </div>
                 </div>
-                
+                <div class="d-none d-md-flex align-items-center">
+                    <a href="javascript:void{0};">
+                        <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
+                    </a>
+                    <a href="cart.html">
+                        <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                    </a>
+                    <div class="d-flex flex-column align-items-end mx-3">
+                        <p class="m-0 text-orange font-12">Hi Welcome!</p>
+                        <p class="m-0 text-orange font-14">Michel</p>
+                    </div>
+                    <img src="wwwroot/images/nav-avatar.svg" alt="profile-img">
+                </div>
             </div>
         </nav>
 
     </header>
 
     <main>
-        <section class="section__hero">
-            <div class="row section__hero__grid">
-                <div class="col-12 col-lg-6 d-flex align-items-end">
-                    <div class="d-flex flex-column">
-                        <p class="font-20">Top Selling!</p>
-                        <h1 class="text-orange font-60">Top Collection</h1>
-                        <p class="font-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidid</p>
-                        <div class="text-center my-3">
-                            <button class="btn btn-1">Shop now</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6 d-flex align-items-start">
-                    <img src="https://placehold.co/600x500/FDD1CB/white" class="d-block img-fluid" alt="banner-img">
-                </div>
-            </div>
-        </section>
-        <section class="bg-orange-60 text-white">
-            <div class="text-center p-5">
-                <h1 class="mb-5">Welcome To The World Of Genuine Leather Shoes</h1>
-                <p class="font-22">Gaitonde Shoes and Accessories Private Limited, manufactures Genuine Leather Shoes and Genuine Leather Accessories under the brand name "Gaitonde". The "Gaitonde" brand has been creating waves in the footwear industry since its inception in 1996</p>
-            </div>
-        </section>
         <section>
-            <h1 class="text-center text-orange my-3 font-60">New Arrival</h1>
-            <div class="row">
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0 img-fluid" alt="latest-product">
+            <h1 class="text-center text-orange my-3 font-60">Profile</h1>
+            <div class="mx-0 mx-lg-5 my-5">
 
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0 img-fluid" alt="latest-product">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0 img-fluid" alt="latest-product">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
-                    </div>
-                </div>
-                <div class="col px-0">
-                    <div class="card rounded-0 border-1">
-                        <img src="https://placehold.co/300x300/FDD1CB/white" class="card-img-top rounded-0" alt="...">
-
-                        <div class="card-footer border-0 rounded-0 bg-orange-20 d-flex align-items-center justify-content-between">
-                            <p class="font-20 bold mb-0">Product 1</p>
-                            <img src="wwwroot/images/product-add-icon.svg" alt="add-icon">
-                        </div>
+            <div class="row mb-5">
+                <div class="col d-flex justify-content-center">
+                    <div class="text-center">
+                        <h4 class="text-orange semibold font-40 my-3">Addresses</h4>
+                        <div class="d-grid my-4">
+                            <button class="btn btn-2" type="">Add A New Address</button>
+                        </div>   
                     </div>
                 </div>
             </div>
-        </section>
-        <section>
-            <h1 class="text-center text-orange my-3 font-60">Best Seller</h1>
-            <div class="row">
-                <div class="col-12 col-lg-6 px-0 border-1">
-                    <img src="https://placehold.co/600x400/FDD1CB/white" class="card-img-top img-fluid" alt="best-seller">
+            <div class="row g-4">
+                <div class="col-12 col-lg-6">
+                    <div class="bg-orange-10 text-center p-2 p-lg-4">
+                        <h4 class="bold mb-5">Address 1</h4>
+                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Lorem ipsum dolor sit amet, consectetur  elit
+                             dolor sit amet, consectetur adipiscing elit</p>
+                        <div class="d-flex justify-content-center gap-4">
+                            <button class="btn btn-2" type="">Edit</button>
+                            <button class="btn btn-2" type="">Delete</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="row">
-                        <div class="col-12 px-0 border-1">
-                            <img src="https://placehold.co/600x200/FDD1CB/white" class="card-img-top img-fluid" alt="best-seller">
+                    <div class="bg-orange-10 text-center p-2 p-lg-4">
+                        <h4 class="bold mb-5">Address 2</h4>
+                        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Lorem ipsum dolor sit amet, consectetur  elit
+                             dolor sit amet, consectetur adipiscing elit</p>
+                        <div class="d-flex justify-content-center gap-4">
+                            <button class="btn btn-2" type="">Edit</button>
+                            <button class="btn btn-2" type="">Delete</button>
                         </div>
-                        <div class="col-12 px-0 border-1">
-                            <img src="https://placehold.co/600x200/FDD1CB/white" class="card-img-top img-fluid" alt="best-seller">
-                        </div>
                     </div>
                 </div>
             </div>
+        </div>
         </section>
-        <section>
-            <h1 class="text-center text-orange my-3 font-60">Our Products</h1>
-            <div class="row" id="divProduct">
-                
-            </div>
-            <div class="d-flex justify-content-center mt-4">
-                <button type="button" onclick="location.href='products.html'" class="btn btn-3">
-                    See all<svg style="margin-left: 12px;" width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M23.7071 8.70711C24.0976 8.31658 24.0976 7.68342 23.7071 7.29289L17.3431 0.928932C16.9526 0.538408 16.3195 0.538408 15.9289 0.928932C15.5384 1.31946 15.5384 1.95262 15.9289 2.34315L21.5858 8L15.9289 13.6569C15.5384 14.0474 15.5384 14.6805 15.9289 15.0711C16.3195 15.4616 16.9526 15.4616 17.3431 15.0711L23.7071 8.70711ZM0 9L23 9V7L0 7L0 9Z" fill="#EC5B47" />
-                    </svg>
-                </button>
-            </div>
-        </section>
-        <section>
-            <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
-        </section>
-
-        <section>
-            <div class="row p-5">
-                <div class="col">
-                    <div class="text-center">
-                        <img src="wwwroot/images/feature1-icon.svg" alt="feature-icon" class="mb-4">
-                        <h5 class="font-20 bold">FREE AND FAST DELIVERY</h5>
-                        <p class="font-18">Free delivery for all orders over $140</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="text-center">
-                        <img src="wwwroot/images/feature2-icon.svg" alt="feature-icon" class="mb-4">
-                        <h5 class="font-20 bold">24/7 CUSTOMER SERVICE</h5>
-                        <p class="font-18">Friendly 24/7 customer support</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="text-center">
-                        <img src="wwwroot/images/feature3-icon.svg" alt="feature-icon" class="mb-4">
-                        <h5 class="font-20 bold">MONEY BACK GUARANTEE</h5>
-                        <p class="font-18">We reurn money within 30 days</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <footer>
         <div class="row bg-orange-20 p-4 g-0">
             <div class="col-12 col-lg-2">
-                <img src="wwwroot/images/gaitonde-logo.svg" alt="gaitonde-logo" class="mb-3 img-fluid">
+                <img src="wwwroot/images/gaitonde-logo.svg" alt="gaitonde-logo" class="mb-3" style="width: 80%;">
                 <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="font-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
@@ -328,6 +242,6 @@
         integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="wwwroot/js/index.js"></script>
-    <script src="wwwroot/js/appsetting.js"></script>
+    <script src="wwwroot/js/appsetting.js"></script>  
 </body>
 </html>
