--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             <div class="row align-items-center justify-content-center my-5">
                 <div class="col-12 col-lg-6 px-0 px-lg-5">
                     <div class="d-flex justify-content-center">
-                        <img src="https://placehold.co/500x500/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
+                        <img src="https://placehold.co/500x500/FDD1CB/white" class="rounded-0 img-fluid" alt="banner-img">
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 px-0 px-lg-5">
